src/app/modules/newsfeed/activity/activity.component.scss
activity {
  display: block;
}
.m-ionic-activity{
  border-bottom:1px solid #EEE;
}

.m-ionic-owner-block{
  display:flex;
  align-items: center;

  > div {
    padding:8px;
  }

  .m-ionic-body{
    flex:1;
  }

  .m-ionic-actions ion-icon{
    font-size: 28px;
    padding: 0 8px;
    color: #AAA;
  }

  img{
    display:block;
  }

  a{
    color: #333;
    text-decoration:none;
  }

  span{
    font-size:11px;
  }
}

.m-ionic-remind-owner-block{

  padding:0 12px;

  ion-icon{
    color: #4690D7;
    font-size: 18px;
  }

  img{
    max-width:24px;
    min-width:24px;
    max-height:24px;
    min-height:24px;
  }
  .m-ionic-body{
    font-size:12px;
    padding:0;
  }

}

.m-ionic-remind-message {
  margin-left: 12px;
  padding: 4px 0 4px 12px;
  border-left: 3px solid #eee;
}

.m-ionic-image{
  img{
    width:100%;
  }
}

.m-ionic-message{
  padding:8px;
  //font-size:11px;

  span {
    line-height: 18px;
    font-size: 14px;
    letter-spacing: 0.3px;
    word-break: inherit;
    white-space: pre-wrap;
  }
}

.m-ionic-editable-container{
  padding:8px;
  text-align:right;

  m-textarea{
    text-align:left;
    margin-bottom:16px;
  }
}

.m-ionic-rich-embed{
  img{
    width:100%;
  }
  h3{
    font-size:16px;
    padding:8px;
    margin:0;
  }
  p{
    padding:0 8px;
    margin:0;
    color:#888;
  }
}

.m-ionic-boosted-tag{
  right: 32px;
  position: absolute;
  padding: 26px 0 0;
  text-transform: uppercase;
  line-height: 1;
  font-size:10px;

  ion-icon{
    font-size:14px;
    vertical-align: middle;
  }

}

.m-ionic-tabs{
  display:flex;

  > * {
    flex:1;
    padding:12px 0;
    color:#888;
    text-align:center;
  }

  .m-ionic-boost-button{
    background-color: #4690D6 !important;
    color: #FFF;
    border-radius: 5px;
    margin-top: 5px;
    margin-right: 8px;
    padding: 0;
    -webkit-appearance: none;
    height: 30px;
    vertical-align: middle;
  }
}

.m-ionic-activity--impressions {
  position: absolute;
  padding: 1px 4px;
  font-size: 9px;
  right: 0;
  background: #EEE;
  border-radius: 3px 0 0 3px;
  margin: -5px 0;
  letter-spacing: 0.5px;
}

